src/objects/Error_Log__c.object
<CustomObject>
    <description>Error Log Object</description>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <label>Error Line Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Stack_Trace__c</fullName>
        <label>Error Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Error Type</description>
        <label>Error Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Web Service Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>